--- a/nyx-cli/Cargo.toml
+++ b/nyx-cli/Cargo.toml
@@ -18,4 +18,28 @@ rpassword = "7.2"
 dirs = "5"
 fluent-bundle = { version = "0.16" }
 unic-langid = "0.9" 
-once_cell = "1.19" 
+once_cell = "1.19"
+
+# gRPC client dependencies
+tonic = { version = "0.10", features = ["transport"] }
+prost = "0.12"
+prost-types = "0.12"
+
+# Networking and async runtime
+tokio = { version = "1.37", features = ["full"] }
+tokio-stream = "0.1"
+
+# Benchmarking and performance measurement
+indicatif = "0.17"
+humantime = "2.1"
+byte-unit = "5.1"
+
+# Enhanced CLI features
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
+colored = "2.1"
+comfy-table = "7.1"
+
+[build-dependencies]
+tonic-build = "0.10" 
