--- a/nyx-cli/Cargo.toml
+++ b/nyx-cli/Cargo.toml
@@ -7,39 +7,29 @@ description = "Nyx command line interface utilities"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-clap = { version = "4", features = ["derive"] }
-reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
-regex = "1.10"
-anyhow = "1" 
-rand = "0.8"
-zeroize = "1.7"
-nyx-crypto = { path = "../nyx-crypto" }
-rpassword = "7.2"
-dirs = "5"
-fluent-bundle = { version = "0.16" }
-unic-langid = "0.9" 
-once_cell = "1.19"
-
-# gRPC client dependencies
-tonic = { version = "0.10", features = ["transport"] }
+clap = { version = "4.5", features = ["derive"] }
+tokio = { version = "1.0", features = ["full"] }
+tonic = "0.10"
 prost = "0.12"
 prost-types = "0.12"
-
-# Networking and async runtime
-tokio = { version = "1.37", features = ["full"] }
 tokio-stream = "0.1"
-
-# Benchmarking and performance measurement
-indicatif = "0.17"
-humantime = "2.1"
-byte-unit = "5.1"
-
-# Enhanced CLI features
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-chrono = { version = "0.4", features = ["serde"] }
-colored = "2.1"
+crossterm = "0.28"
 comfy-table = "7.1"
+console = "0.15"
+indicatif = "0.17"
+byte-unit = "5.1"
+colored = "2.2"
+i18n-embed = { version = "0.15", features = ["fluent-system", "desktop-requester"] }
+fluent-bundle = "0.16"
+rust-embed = "8.7"
+nyx-crypto = { path = "../nyx-crypto" }
+serde_yaml = "0.9"
+fluent = "0.17"
+serde_json = "1.0"
+unic-langid = "0.9"
+ctrlc = "3.4"
+humantime = "2.1"
+serde = { version = "1.0", features = ["derive"] }
 
 [build-dependencies]
 tonic-build = "0.10" 
