--- a/nyx-core/Cargo.toml
+++ b/nyx-core/Cargo.toml
@@ -20,7 +20,6 @@ serde_cbor = "0.11"
 tokio-stream = { version = "0.1", features=["sync"] }
 async-trait = "0.1"
 anyhow = "1"
-libc = "0.2"
 uuid = { version = "1.6", features = ["v4", "serde"] }
 rand = { version = "0.8", features = ["std"] }
 chrono = { version = "0.4", features = ["serde"] }
@@ -51,6 +50,10 @@ apns = ["dep:a2"]
 [target.'cfg(target_os = "linux")'.dependencies]
 seccomp = "0.1"
 anyhow = "1"
+
+[target.'cfg(target_os = "openbsd")'.dependencies]
+pledge = "0.4"
+unveil = "0.3"
 
 [dev-dependencies]
 hex-literal = "0.4"
