--- a/nyx-stream/Cargo.toml
+++ b/nyx-stream/Cargo.toml
@@ -28,9 +28,11 @@ libloading = { version = "0.8", optional = true }
 [target.'cfg(unix)'.dependencies]
 nix = { version = "0.27", optional = true, default-features = false, features = ["sched", "hostname", "fs"] }
 caps = { version = "0.5.5", optional = true }
+extrasafe = { version = "0.5", optional = true }
 
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.56", features = ["Win32_Foundation","Win32_System_Threading","Win32_System_JobObjects", "Win32_Security"] }
+win32job = "2.0"
 
 [dev-dependencies]
 tempfile = "3.8"
@@ -39,5 +41,5 @@ tempfile = "3.8"
 default = []
 plugin = []
 mpr_experimental = []
-dynamic_plugin = ["libloading", "nix", "caps"]
+dynamic_plugin = ["libloading", "nix", "caps", "extrasafe"]
 hpke = ["nyx-crypto/hpke"]
