--- a/nyx-cli/Cargo.toml
+++ b/nyx-cli/Cargo.toml
@@ -23,6 +23,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 anyhow = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
+uuid = { version = "1.0", features = ["v4"] }
 
 [build-dependencies]
 tonic-build = "0.10" 
