--- a/nyx-cli/Cargo.toml
+++ b/nyx-cli/Cargo.toml
@@ -24,6 +24,7 @@ serde_json = "1.0"
 anyhow = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.0", features = ["v4"] }
+fastrand = "2.0"
 
 [build-dependencies]
 tonic-build = "0.10" 
