--- a/nyx-cli/Cargo.toml
+++ b/nyx-cli/Cargo.toml
@@ -25,6 +25,10 @@ anyhow = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.0", features = ["v4"] }
 fastrand = "2.0"
+sha2 = "0.10"
+tokio-util = { version = "0.7", features = ["codec", "io"] }
+futures = "0.3"
+md5 = "0.7"
 
 [build-dependencies]
 tonic-build = "0.10" 
