--- a/nyx-cli/Cargo.toml
+++ b/nyx-cli/Cargo.toml
@@ -29,6 +29,9 @@ sha2 = "0.10"
 tokio-util = { version = "0.7", features = ["codec", "io"] }
 futures = "0.3"
 md5 = "0.7"
+reqwest = { version = "0.11", features = ["json"] }
+url = "2.5"
+regex = "1.10"
 
 [build-dependencies]
 tonic-build = "0.10" 
