--- a/nyx-sdk/Cargo.toml
+++ b/nyx-sdk/Cargo.toml
@@ -65,4 +65,6 @@ metrics = ["nyx-core/telemetry"]
 
 [dev-dependencies]
 tempfile = "3.8"
-tokio-test = "0.4" 
+tokio-test = "0.4"
+assert_cmd = "2.0"
+predicates = "3.0" 
