--- a/nyx-daemon/Cargo.toml
+++ b/nyx-daemon/Cargo.toml
@@ -53,7 +53,6 @@ config = "0.14"
 # libp2p = { version = "0.53", features = ["kad", "mdns", "yamux", "tcp", "dns", "tokio", "macros"] }
 # libp2p-identity = "0.2"
 # libp2p-kad = "0.45"
-# libp2p-swarm = "0.44"
 
 # Pure Rust cryptography to replace libp2p-noise
 chacha20poly1305 = { version = "0.10", features = ["alloc"] }
@@ -79,6 +78,8 @@ axum = { version = "0.7", default-features = false, features = ["http1", "json",
 # Crypto and security
 rand = "0.8"
 blake3 = "1.5"
+# Pure Rust DHT dependencies (ed25519-dalek already present above)
+# Additional DHT support (hex already present above)
 hex = "0.4"
 
 # Pure Rust TLS for tonic (avoiding ring dependency) - DISABLED to avoid C++ deps
@@ -103,6 +104,17 @@ hickory-resolver = "0.24"
 
 # Database for peer persistence (Pure Rust alternative)
 redb = { version = "2.1", features = ["logging"] }
+
+# DHT and networking - Pure Rust implementation (100% Pure Rust, no C/C++ deps)
+# Avoiding ALL ring dependencies including rustls, tokio-rustls
+# Using plain TCP/TLS with pure Rust crypto
+trust-dns-resolver = "0.23"
+bincode = "1.3"
+ed25519-dalek = { version = "2.0", features = ["rand_core"] }
+sha2 = "0.10"
+# Pure Rust TLS alternative (no ring dependency)
+native-tls = "0.2"  # Pure Rust TLS implementation
+tokio-native-tls = "0.3"
 
 [build-dependencies]
 tonic-build = "0.10" 
