--- a/nyx.toml
+++ b/nyx.toml
@@ -4,4 +4,36 @@ listen_port = 43300
 node_id = "auto"
 
 # Logging
-log_level = "info" 
+log_level = "info"
+
+# Bootstrap peers for network discovery
+bootstrap_peers = [
+    "/dns4/validator1.nymtech.net/tcp/1789/p2p/12D3KooWNyxMainnet1",
+    "/dns4/validator2.nymtech.net/tcp/1789/p2p/12D3KooWNyxMainnet2",
+    "/dns4/testnet-validator1.nymtech.net/tcp/1789/p2p/12D3KooWNyxTestnet1"
+]
+
+# Network binding configuration
+[network]
+# Bind address - use 0.0.0.0 for production, 127.0.0.1 for development
+bind_addr = "0.0.0.0:43300"
+# Development mode for localhost binding
+development = false
+
+# DHT configuration
+[dht]
+# Enable DHT peer discovery
+enabled = true
+# DHT bind port
+port = 43301
+# Peer cache size
+peer_cache_size = 1000
+# Discovery timeout in seconds
+discovery_timeout = 30
+
+# Service endpoints
+[endpoints]
+# gRPC control API address
+grpc_addr = "127.0.0.1:50051"
+# Prometheus metrics address  
+prometheus_addr = "127.0.0.1:9090"
